# ext-vanillagenerator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Noise.cpp  Noise.h  Noise.old.cpp  README.md  SimplexNoise.cpp  build.sh  config.m4  config.w32  extnoise.cpp  main.cpp  mcgenerator.cpp  noisegen.ini  noiselib.cpp  output.txt  php_extnoise.h  php_mcgenerator.h  php_noiselib.cpp  php_noiselib.h  php_vanillagenerator.cpp  php_vanillagenerator.h  results.txt  stubs.php  testscript.php  vanillagenerator.cpp
.github/: build-7.3.ps1  build-7.4.ps1  build.ps1  install-7.3.ps1  install-7.4.ps1  install.ps1
.github/workflows/: windows.yaml
.libs/: noiselib.la  noiselib.lai
bukkit/: perlin_noise.cpp
includes/: OverworldGenerator.h
includes/blocks/: Blocks.h  Chunk.h
includes/generator/: Generator.h
includes/noise/: Noise.h
lib/: MortonHelper.h  ZendUtil.h
lib/biomes/: BiomeArray.cpp  BiomeArray.h  BiomeClimate.cpp  BiomeClimate.h  BiomeHeightManager.cpp  BiomeHeightManager.h
lib/bukkit/: BasePerlinNoiseGenerator.h  NoiseGenerator.h  PerlinNoiseGenerator.h  SimplexNoiseGenerator.h
lib/chunk/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  SimpleChunkManager.cpp  SimpleChunkManager.h
lib/debug/: Debug.cpp  Debug.h
lib/generator/: Misc.h  NormalPopulator.cpp  NormalPopulators.h  OverworldGenerator.cpp  OverworldGenerator.h  OverworldPopulators.cpp  OverworldPopulators.h  Populator.h  TerrainObjects.cpp  TerrainObjects.h
lib/glowstone/: PerlinNoise.h  SimplexNoise.h
lib/noise/: BukkitSimplexNoiseGenerator.cpp  BukkitSimplexNoiseGenerator.h  PerlinNoise.cpp  PerlinNoise.h  SimplexNoise.cpp  SimplexNoise.h
lib/objects/: Biome.cpp  Biome.h  BiomeArray.cpp  BiomeArray.h  BiomeHeightManager.cpp  BiomeHeightManager.h  MinecraftBlock.cpp  MinecraftBlock.h  VanillaBiomeGrid.cpp  VanillaBiomeGrid.h
lib/octaves/: BaseOctaveGenerator.h  OctaveGenerator.h  PerlinOctaveGenerator.h  SimplexOctaveGenerator.h
lib/pocketmine/: BlockList.h  Constants.h  Random.h
lib/random/: Random.cpp  Random.h
lib/vanilla/: Biome.cpp  Biome.h  BukkitSimplexNoiseGenerator.cpp  BukkitSimplexNoiseGenerator.h  PerlinNoise.cpp  PerlinNoise.h  SimplexNoise.cpp  SimplexNoise.h  Utils.cpp  Utils.h  VanillaNoise.cpp  VanillaNoise.h
src/: NetherGeneratorImpl.cpp  NetherGeneratorImpl.h  Noise.cpp  Noise.h  NoiseMapGenerator.cpp  NoiseMapGenerator.h  OverworldChunkPopulator.cpp  OverworldChunkPopulator.h  OverworldGenerator.cpp  OverworldGeneratorImpl.cpp  OverworldGeneratorImpl.h  PerlinNoiseImpl.cpp  PerlinNoiseImpl.h  PerlinOctaveGeneratorImpl.cpp  PerlinOctaveGeneratorImpl.h  RandomImpl.cpp  RandomImpl.h  SimplexNoiseImpl.cpp  SimplexNoiseImpl.h  SimplexOctaveGeneratorImpl.cpp  SimplexOctaveGeneratorImpl.h
tests/: generator_testing.php
(+327 files in other folders)
